# fliphash-rs

./: Cargo.toml  LICENSE  LICENSE-3rdparty.csv  README.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: perf.rs
benchmarks/results/collisions/: 64_bytes_100_resources.jsonl
benchmarks/results/independence_across_ranges/: 64_bytes_7_17_resources.jsonl
benchmarks/results/independence_across_seeds/: 64_bytes_2_seeds_100_resources.jsonl
benchmarks/results/regularity/: 64_bytes_100_resources.jsonl
benchmarks/src/: acc.rs  algo.rs  anchor.rs  jump.rs  lib.rs  main.rs
benchmarks/src/exp/: collisions.rs  independence.rs  mod.rs  regularity.rs
src/: lib.rs
