[package]
name = "fliphash"
description = "A constant-time consistent range-hashing algorithm"
version = "0.1.0"
edition = "2021"
authors = ["Charles Masson <charles@datadog.com>"]
license-file = "LICENSE"
keywords = ["hashing", "consistent", "no-std"]
homepage = "https://github.com/DataDog/fliphash-rs"
repository = "https://github.com/DataDog/fliphash-rs"
readme = "README.md"

[features]
xxh3 = ["xxhash-rust"]

[dependencies]
xxhash-rust = { version = "0.8.8", optional = true, default-features = false, features = ["const_xxh3", "xxh3"] }

[dev-dependencies]
itertools = { version = "0.12.1" }
num-traits = { version = "0.2.18" }
ordered-float = { version = "4.2.0" }
proptest = { version = "1.4.0" }
proptest-derive = { version = "0.4.0" }
rand = { version = "0.8.5", features = ["std_rng"] }
statrs = { version = "0.16.0" }
test-case = { version = "3.3.1" }

[workspace]
exclude = ["./benchmarks"]
